[project]
name = "fixit"
version = "0.1.0"
description = "iFixit-powered MCP server for repair guides and device support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.5",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "websockets>=13.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
fixit = "main:mcp"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [""]
